adjust note drag styles and fix note going off screen

--- a/src/App.scss
+++ b/src/App.scss
@@ -43,7 +43,7 @@ $head-font: young-serif;
 $body-font: roboto;
 
 // Screen Widths
-$mobile: 576px;
+$mobile: 767px;
 
 //Styles
 h1, h2, h3, h4, h5, h6{
@@ -74,6 +74,7 @@ strong {
 }
 
 main{
+    position: relative;
     height: 100vh;
     overflow: hidden;
     &.drag *{
@@ -176,13 +177,24 @@ main{
     } 
     @media screen and (min-width: $mobile) {
         &:hover:not(.dragging){ opacity: 1; height: 60px; }
+        &.active{
+            opacity: 1;
+            &.dragging{
+                height: 40px;
+                opacity: 0;
+            }
+        } 
     }
-    &.active{
-        opacity: 1;
-        &.dragging{
-            opacity: 0;
-        }
-    } 
+    @media screen and (max-width: $mobile) {
+        &.active{
+            opacity: 1;
+            height: 60px;
+            &.dragging{
+                height: 20px;
+                opacity: 0;
+            }
+        } 
+    }
     &.drag-note{
         position: absolute;
         opacity: 0; 
@@ -190,8 +202,7 @@ main{
         box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
         z-index: 9;
         &.move{
-            opacity: 1; 
-            transform: translate(0px, -50%);
+            opacity: 1;
             &.fly{
                 transform-origin: 0 0;
                 -webkit-transform-origin: 0 0;
@@ -200,6 +211,10 @@ main{
         }
         @media screen and (max-width: $mobile) {
             z-index: 99;
+            border-radius: 5px;
+            &.move{
+                opacity: 0.8;
+            }
         }
     }
 }  
@@ -328,6 +343,7 @@ main{
             }
         } 
         &.hide{
+            transition: 0s all;
             opacity: 0;
             pointer-events: none;
         }               
@@ -547,16 +563,19 @@ main{
         z-index: 9;
         width: 40px;
         height: 44px;
-        transition: 0.6s all ease-in-out;
+        transition: 0.1s all ease-in-out;
         svg{
             font-size: 45px;
             position: absolute;
             transition: 0.1s all ease-in-out;
-            opacity: 0.7;  
+            opacity: 0.7;
             &:nth-child(1){
+                transition: 0.6s all ease-in-out;
                 opacity: 0.7;
             }
             &:nth-child(2){
+                transition: 0.6s all ease-in-out;
+                color: #fff;
                 opacity: 0;
             }          
         }
@@ -565,19 +584,20 @@ main{
                 transform: scale(0.8);                
             }
         }
-        &.active{  
-            transition: 0.1s all ease-in-out; 
-            color: #fff;
+        &.active{
             svg{
                 &:nth-child(1){
+                    transition: 0.1s all ease-in-out;
                     opacity: 0;
                 }
                 &:nth-child(2){
+                    transition: 0.1s all ease-in-out;
                     opacity: 0.7;
                 }
             }            
         }
         &.hide{
+            transition: 0s;
             pointer-events: none;
             opacity: 0;
         }
